Created Bugs DAO and ability to create Bugs

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -13,5 +13,9 @@
             <li>#{bug.id} #{bug.title}</li>
         </ui:repeat>
     </ul>
+    <h:form>
+        <h:inputText value="#{bugs.bugToCreate.title}" required="true" />
+        <h:commandButton value="Create new Bug" action="#{bugs.createBug}" />
+    </h:form>
 </h:body>
 </html>
