Fixing wording and some typos in xhtml

--- a/src/main/webapp/bugs.xhtml
+++ b/src/main/webapp/bugs.xhtml
@@ -6,6 +6,6 @@
       xmlns:f="http://java.sun.com/jsf/core">
 <h:head/>
 <h:body>
-    <h2>Players playing in #{bugsForProject.project.name} team:</h2>
+    <h2>Bugs in "#{bugsForProject.project.name}" project:</h2>
 </h:body>
 </html>
