Fixed the issues with myBatis generation, introduced missing files

--- a/src/main/webapp/bugs.xhtml
+++ b/src/main/webapp/bugs.xhtml
@@ -19,5 +19,6 @@
             <f:param name="projectId" value="#{bugsForProject.project.id}" />
         </h:commandButton>
     </h:form>
+    <h:link outcome="index" value="Back to Projects page"/>
 </h:body>
 </html>
