--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -17,5 +17,6 @@
         <h:inputText value="#{projects.projectToCreate.name}" required="true" />
         <h:commandButton value="Add new Project" action="#{projects.createProject}" />
     </h:form>
+    <h:link outcome="myBatis/projects" value="MyBatis implementation"/>
 </h:body>
 </html>
