--- a/src/main/webapp/myBatis/projects.xhtml
+++ b/src/main/webapp/myBatis/projects.xhtml
@@ -14,7 +14,7 @@
     </ol>
     <h:form>
         <h:inputText value="#{projectsMyBatis.projectToCreate.name}" required="true" />
-        <h:commandButton value="Add new project" action="#{projectsMyBatis.createTeam}" />
+        <h:commandButton value="Add new project" action="#{projectsMyBatis.createProject}" />
     </h:form>
     <h:link value="Back to index" outcome="/index"/>
 </h:body>
