--- a/src/main/webapp/myBatis/projects.xhtml
+++ b/src/main/webapp/myBatis/projects.xhtml
@@ -9,7 +9,7 @@
     <h2>Projects:</h2>
     <ol>
         <ui:repeat value="#{projectsMyBatis.allProjects}" var="project">
-            <li><h:link value="#{project.name}" outcome="projects?projectId=#{project.id}" /></li>
+            <li><h:link value="#{project.name}" outcome="bugs?projectId=#{project.id}" /></li>
         </ui:repeat>
     </ol>
     <h:form>
