moved many to many relationship to the project from the user

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -20,7 +20,7 @@
     <h2>Users:</h2>
     <ul>
         <ui:repeat value="#{users.allUsers}" var="user">
-            <li>#{user.username}</li>
+            <li>#{user.id} #{user.username}</li>
         </ui:repeat>
     </ul>
     <h:form>
