--- a/src/main/webapp/bugDetails.xhtml
+++ b/src/main/webapp/bugDetails.xhtml
@@ -4,6 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui"
 >
 <h:head/>
 <h:body>
@@ -17,10 +18,11 @@
         <h:outputText value="Value was already modified by other user. If you want to override it - try again" rendered="#{param['error'] == 'optimistic-lock-exception'}" />
     </h:form>
     <h:form>
-        <h:outputText value="#{findPossibleDuplicate.duplicateFindingStatus}" />
+        <h:outputText id="duplicateFinderOutputText" value="#{findPossibleDuplicate.duplicateFindingStatus}" />
         <h:commandButton value="Search for possible duplicate" disabled="#{findPossibleDuplicate.duplicateFindingRunning}" action="#{findPossibleDuplicate.findPossibleDuplicate()}">
             <f:param name="bugId" value="#{updateBug.bug.id}" />
         </h:commandButton>
+        <p:poll interval="1" update="duplicateFinderOutputText" />
     </h:form>
     <h:link outcome="index" value="Back to home page"/>
 </h:body>
